--- a/frontend/style.css
+++ b/frontend/style.css
@@ -3,6 +3,26 @@ html, body {
 	padding: 0px;
 }
 
+h1, i, p {
+	margin: 0px;
+	padding: 0px;
+}
+
+input {
+	width: 100%;
+	height: 30px;
+	border: 2px solid;
+	border-radius: 50px;
+	outline: none;
+
+	background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat;
+	background-position: right 10px center;
+
+	font-size: 15px;
+	
+	padding-left: 10px;
+}
+
 .app {
 	display: flex;
 	align-items: center;
@@ -31,22 +51,14 @@ html, body {
 	text-align: center;
 }
 
-h1, i, p {
-	margin: 0px;
-	padding: 0px;
+.error_text {
+	color: red;
 }
 
-input {
-	width: 100%;
-	height: 30px;
-	border: 2px solid;
-	border-radius: 50px;
-	outline: none;
+.warn_text {
+	color: yellow;
+}
 
-	background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat;
-	background-position: right 10px center;
-
-	font-size: 15px;
+.normal_text {
 	
-	padding-left: 10px;
-};
+}
