--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,3 +1,5 @@
+/* Color Palette: https://coolors.co/palette/001219-005f73-0a9396-94d2bd-e9d8a6-ee9b00-ca6702-bb3e03-ae2012-9b2226 */
+
 html, body {
 	margin: 0px;
 	padding: 0px;
@@ -11,16 +13,26 @@ h1, i, p {
 input {
 	width: 100%;
 	height: 30px;
-	border: 2px solid;
+	border: 2px solid white;
 	border-radius: 50px;
 	outline: none;
 
-	background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat;
+	background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='white' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat;
 	background-position: right 10px center;
 
 	font-size: 15px;
 	
 	padding-left: 10px;
+}
+
+::placeholder {
+	color: white;
+	opacity: 1;
+}
+
+::-ms-input-placeholder {
+	color: white;
+	opacity: 1;
 }
 
 .app {
@@ -30,6 +42,9 @@ input {
 	height: 100vh;
 
 	font-family: "Jost", sans-serif;
+	color: white;
+	
+	background-color: #B6CCC4;
 }
 
 .card {
@@ -37,9 +52,12 @@ input {
 	width: 100%;
 	padding: 40px;
 	margin: 20px;
+	
 	border-radius: 20px;
+	border: 5px solid;
 	box-shadow: 0 0 70px 30;
-	background-color: #e0e0e0;
+	
+	background-color: #005F73;
 }
 
 .footer {
@@ -52,11 +70,11 @@ input {
 }
 
 .error_text {
-	color: red;
+	color: #AE2012;
 }
 
 .warn_text {
-	color: yellow;
+	color: #EE9B00;
 }
 
 .normal_text {
