--- a/frontend/style.css
+++ b/frontend/style.css
@@ -19,6 +19,8 @@ input {
 
 	background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='white' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat;
 	background-position: right 10px center;
+	
+	color: white;
 
 	font-size: 15px;
 	
@@ -26,12 +28,14 @@ input {
 }
 
 ::placeholder {
-	color: white;
+	color: #94D2BD;
+	font-style: italic;
 	opacity: 1;
 }
 
 ::-ms-input-placeholder {
-	color: white;
+	color: #94D2BD;
+	font-style: italic;
 	opacity: 1;
 }
 
